Meta4/y.output
Terminals unused in grammar

   RESERVED
   INVCHRLIT
   UNTCHRLIT


Grammar

    0 $accept: Program $end

    1 Program: Start

    2 Start: FunctionDefinition StartAux
    3      | FunctionDeclaration StartAux
    4      | Declaration StartAux

    5 StartAux: StartAux FunctionDefinition
    6         | StartAux FunctionDeclaration
    7         | StartAux Declaration
    8         | %empty

    9 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

   10 FunctionBody: LBRACE RBRACE
   11             | LBRACE DeclarationsAndStatements RBRACE

   12 DeclarationsAndStatements: DeclarationsAndStatements Statement
   13                          | DeclarationsAndStatements Declaration
   14                          | Statement
   15                          | Declaration

   16 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   17 FunctionDeclarator: ID LPAR ParameterList RPAR

   18 ParameterList: ParameterDeclaration ParameterListAux

   19 ParameterListAux: COMMA ParameterDeclaration ParameterListAux
   20                 | %empty

   21 ParameterDeclaration: TypeSpec ID
   22                     | TypeSpec

   23 Declaration: TypeSpec Declarator DeclarationAux SEMI
   24            | error SEMI

   25 DeclarationAux: DeclarationAux COMMA Declarator
   26               | %empty

   27 TypeSpec: CHAR
   28         | INT
   29         | VOID
   30         | SHORT
   31         | DOUBLE

   32 Declarator: ID ASSIGN ExpressionAux
   33           | ID

   34 Statement: ExpressionAux SEMI
   35          | SEMI
   36          | LBRACE StatementErrorAux RBRACE
   37          | LBRACE RBRACE
   38          | IF LPAR ExpressionAux RPAR StatementError
   39          | IF LPAR ExpressionAux RPAR StatementError ELSE StatementError
   40          | WHILE LPAR ExpressionAux RPAR StatementError
   41          | RETURN ExpressionAux SEMI
   42          | RETURN SEMI
   43          | LBRACE error RBRACE

   44 StatementErrorAux: StatementErrorAux StatementError
   45                  | StatementError

   46 StatementError: Statement
   47               | error SEMI

   48 Expression: Expression ASSIGN Expression
   49           | Expression PLUS Expression
   50           | Expression MINUS Expression
   51           | Expression MUL Expression
   52           | Expression DIV Expression
   53           | Expression MOD Expression
   54           | Expression OR Expression
   55           | Expression AND Expression
   56           | Expression BITWISEAND Expression
   57           | Expression BITWISEOR Expression
   58           | Expression BITWISEXOR Expression
   59           | Expression EQ Expression
   60           | Expression NE Expression
   61           | Expression LE Expression
   62           | Expression GE Expression
   63           | Expression LT Expression
   64           | Expression GT Expression
   65           | PLUS Expression
   66           | MINUS Expression
   67           | NOT Expression
   68           | ID LPAR Expression ExpressionSecAux RPAR
   69           | ID LPAR RPAR
   70           | ID
   71           | INTLIT
   72           | CHRLIT
   73           | REALLIT
   74           | LPAR ExpressionAux RPAR
   75           | LPAR error RPAR
   76           | ID LPAR error RPAR

   77 ExpressionAux: ExpressionAux COMMA Expression
   78              | Expression

   79 ExpressionSecAux: ExpressionSecAux COMMA Expression
   80                 | %empty


Terminals, with rules where they appear

$end (0) 0
error (256) 24 43 47 75 76
CHAR (258) 27
ELSE (259) 39
WHILE (260) 40
IF (261) 38 39
INT (262) 28
SHORT (263) 30
DOUBLE (264) 31
RETURN (265) 41 42
VOID (266) 29
AND (267) 55
OR (268) 54
BITWISEAND (269) 56
BITWISEOR (270) 57
BITWISEXOR (271) 58
MUL (272) 51
COMMA (273) 19 25 77 79
DIV (274) 52
EQ (275) 59
NE (276) 60
GE (277) 62
GT (278) 64
LE (279) 61
LT (280) 63
ASSIGN (281) 32 48
NOT (282) 67
LBRACE (283) 10 11 36 37 43
LPAR (284) 17 38 39 40 68 69 74 75 76
RBRACE (285) 10 11 36 37 43
RPAR (286) 17 38 39 40 68 69 74 75 76
MINUS (287) 50 66
PLUS (288) 49 65
MOD (289) 53
SEMI (290) 16 23 24 34 35 41 42 47
RESERVED (291)
ID (292) 17 21 32 33 68 69 70 76
INTLIT (293) 71
CHRLIT (294) 72
INVCHRLIT (295)
UNTCHRLIT (296)
REALLIT (297) 73
UNARY (298)
IFPREC (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
Program (46)
    on left: 1, on right: 0
Start (47)
    on left: 2 3 4, on right: 1
StartAux (48)
    on left: 5 6 7 8, on right: 2 3 4 5 6 7
FunctionDefinition (49)
    on left: 9, on right: 2 5
FunctionBody (50)
    on left: 10 11, on right: 9
DeclarationsAndStatements (51)
    on left: 12 13 14 15, on right: 11 12 13
FunctionDeclaration (52)
    on left: 16, on right: 3 6
FunctionDeclarator (53)
    on left: 17, on right: 9 16
ParameterList (54)
    on left: 18, on right: 17
ParameterListAux (55)
    on left: 19 20, on right: 18 19
ParameterDeclaration (56)
    on left: 21 22, on right: 18 19
Declaration (57)
    on left: 23 24, on right: 4 7 13 15
DeclarationAux (58)
    on left: 25 26, on right: 23 25
TypeSpec (59)
    on left: 27 28 29 30 31, on right: 9 16 21 22 23
Declarator (60)
    on left: 32 33, on right: 23 25
Statement (61)
    on left: 34 35 36 37 38 39 40 41 42 43, on right: 12 14 46
StatementErrorAux (62)
    on left: 44 45, on right: 36 44
StatementError (63)
    on left: 46 47, on right: 38 39 40 44 45
Expression (64)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76, on right: 48 49 50 51 52 53 54
    55 56 57 58 59 60 61 62 63 64 65 66 67 68 77 78 79
ExpressionAux (65)
    on left: 77 78, on right: 32 34 38 39 40 41 74 77
ExpressionSecAux (66)
    on left: 79 80, on right: 68 79


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    Program              go to state 7
    Start                go to state 8
    FunctionDefinition   go to state 9
    FunctionDeclaration  go to state 10
    Declaration          go to state 11
    TypeSpec             go to state 12


State 1

   24 Declaration: error . SEMI

    SEMI  shift, and go to state 13


State 2

   27 TypeSpec: CHAR .

    $default  reduce using rule 27 (TypeSpec)


State 3

   28 TypeSpec: INT .

    $default  reduce using rule 28 (TypeSpec)


State 4

   30 TypeSpec: SHORT .

    $default  reduce using rule 30 (TypeSpec)


State 5

   31 TypeSpec: DOUBLE .

    $default  reduce using rule 31 (TypeSpec)


State 6

   29 TypeSpec: VOID .

    $default  reduce using rule 29 (TypeSpec)


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 8

    1 Program: Start .

    $default  reduce using rule 1 (Program)


State 9

    2 Start: FunctionDefinition . StartAux

    $default  reduce using rule 8 (StartAux)

    StartAux  go to state 15


State 10

    3 Start: FunctionDeclaration . StartAux

    $default  reduce using rule 8 (StartAux)

    StartAux  go to state 16


State 11

    4 Start: Declaration . StartAux

    $default  reduce using rule 8 (StartAux)

    StartAux  go to state 17


State 12

    9 FunctionDefinition: TypeSpec . FunctionDeclarator FunctionBody
   16 FunctionDeclaration: TypeSpec . FunctionDeclarator SEMI
   23 Declaration: TypeSpec . Declarator DeclarationAux SEMI

    ID  shift, and go to state 18

    FunctionDeclarator  go to state 19
    Declarator          go to state 20


State 13

   24 Declaration: error SEMI .

    $default  reduce using rule 24 (Declaration)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 Start: FunctionDefinition StartAux .
    5 StartAux: StartAux . FunctionDefinition
    6         | StartAux . FunctionDeclaration
    7         | StartAux . Declaration

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 2 (Start)

    FunctionDefinition   go to state 21
    FunctionDeclaration  go to state 22
    Declaration          go to state 23
    TypeSpec             go to state 12


State 16

    3 Start: FunctionDeclaration StartAux .
    5 StartAux: StartAux . FunctionDefinition
    6         | StartAux . FunctionDeclaration
    7         | StartAux . Declaration

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 3 (Start)

    FunctionDefinition   go to state 21
    FunctionDeclaration  go to state 22
    Declaration          go to state 23
    TypeSpec             go to state 12


State 17

    4 Start: Declaration StartAux .
    5 StartAux: StartAux . FunctionDefinition
    6         | StartAux . FunctionDeclaration
    7         | StartAux . Declaration

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 4 (Start)

    FunctionDefinition   go to state 21
    FunctionDeclaration  go to state 22
    Declaration          go to state 23
    TypeSpec             go to state 12


State 18

   17 FunctionDeclarator: ID . LPAR ParameterList RPAR
   32 Declarator: ID . ASSIGN ExpressionAux
   33           | ID .

    ASSIGN  shift, and go to state 24
    LPAR    shift, and go to state 25

    $default  reduce using rule 33 (Declarator)


State 19

    9 FunctionDefinition: TypeSpec FunctionDeclarator . FunctionBody
   16 FunctionDeclaration: TypeSpec FunctionDeclarator . SEMI

    LBRACE  shift, and go to state 26
    SEMI    shift, and go to state 27

    FunctionBody  go to state 28


State 20

   23 Declaration: TypeSpec Declarator . DeclarationAux SEMI

    $default  reduce using rule 26 (DeclarationAux)

    DeclarationAux  go to state 29


State 21

    5 StartAux: StartAux FunctionDefinition .

    $default  reduce using rule 5 (StartAux)


State 22

    6 StartAux: StartAux FunctionDeclaration .

    $default  reduce using rule 6 (StartAux)


State 23

    7 StartAux: StartAux Declaration .

    $default  reduce using rule 7 (StartAux)


State 24

   32 Declarator: ID ASSIGN . ExpressionAux

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression     go to state 38
    ExpressionAux  go to state 39


State 25

   17 FunctionDeclarator: ID LPAR . ParameterList RPAR

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterList         go to state 40
    ParameterDeclaration  go to state 41
    TypeSpec              go to state 42


State 26

   10 FunctionBody: LBRACE . RBRACE
   11             | LBRACE . DeclarationsAndStatements RBRACE

    error    shift, and go to state 1
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 43
    IF       shift, and go to state 44
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 45
    VOID     shift, and go to state 6
    NOT      shift, and go to state 30
    LBRACE   shift, and go to state 46
    LPAR     shift, and go to state 31
    RBRACE   shift, and go to state 47
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    SEMI     shift, and go to state 48
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    DeclarationsAndStatements  go to state 49
    Declaration                go to state 50
    TypeSpec                   go to state 51
    Statement                  go to state 52
    Expression                 go to state 38
    ExpressionAux              go to state 53


State 27

   16 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI .

    $default  reduce using rule 16 (FunctionDeclaration)


State 28

    9 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody .

    $default  reduce using rule 9 (FunctionDefinition)


State 29

   23 Declaration: TypeSpec Declarator DeclarationAux . SEMI
   25 DeclarationAux: DeclarationAux . COMMA Declarator

    COMMA  shift, and go to state 54
    SEMI   shift, and go to state 55


State 30

   67 Expression: NOT . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 56


State 31

   74 Expression: LPAR . ExpressionAux RPAR
   75           | LPAR . error RPAR

    error    shift, and go to state 57
    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression     go to state 38
    ExpressionAux  go to state 58


State 32

   66 Expression: MINUS . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 59


State 33

   65 Expression: PLUS . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 60


State 34

   68 Expression: ID . LPAR Expression ExpressionSecAux RPAR
   69           | ID . LPAR RPAR
   70           | ID .
   76           | ID . LPAR error RPAR

    LPAR  shift, and go to state 61

    $default  reduce using rule 70 (Expression)


State 35

   71 Expression: INTLIT .

    $default  reduce using rule 71 (Expression)


State 36

   72 Expression: CHRLIT .

    $default  reduce using rule 72 (Expression)


State 37

   73 Expression: REALLIT .

    $default  reduce using rule 73 (Expression)


State 38

   48 Expression: Expression . ASSIGN Expression
   49           | Expression . PLUS Expression
   50           | Expression . MINUS Expression
   51           | Expression . MUL Expression
   52           | Expression . DIV Expression
   53           | Expression . MOD Expression
   54           | Expression . OR Expression
   55           | Expression . AND Expression
   56           | Expression . BITWISEAND Expression
   57           | Expression . BITWISEOR Expression
   58           | Expression . BITWISEXOR Expression
   59           | Expression . EQ Expression
   60           | Expression . NE Expression
   61           | Expression . LE Expression
   62           | Expression . GE Expression
   63           | Expression . LT Expression
   64           | Expression . GT Expression
   78 ExpressionAux: Expression .

    AND         shift, and go to state 62
    OR          shift, and go to state 63
    BITWISEAND  shift, and go to state 64
    BITWISEOR   shift, and go to state 65
    BITWISEXOR  shift, and go to state 66
    MUL         shift, and go to state 67
    DIV         shift, and go to state 68
    EQ          shift, and go to state 69
    NE          shift, and go to state 70
    GE          shift, and go to state 71
    GT          shift, and go to state 72
    LE          shift, and go to state 73
    LT          shift, and go to state 74
    ASSIGN      shift, and go to state 75
    MINUS       shift, and go to state 76
    PLUS        shift, and go to state 77
    MOD         shift, and go to state 78

    $default  reduce using rule 78 (ExpressionAux)


State 39

   32 Declarator: ID ASSIGN ExpressionAux .
   77 ExpressionAux: ExpressionAux . COMMA Expression

    $default  reduce using rule 32 (Declarator)


State 40

   17 FunctionDeclarator: ID LPAR ParameterList . RPAR

    RPAR  shift, and go to state 80


State 41

   18 ParameterList: ParameterDeclaration . ParameterListAux

    COMMA  shift, and go to state 81

    $default  reduce using rule 20 (ParameterListAux)

    ParameterListAux  go to state 82


State 42

   21 ParameterDeclaration: TypeSpec . ID
   22                     | TypeSpec .

    ID  shift, and go to state 83

    $default  reduce using rule 22 (ParameterDeclaration)


State 43

   40 Statement: WHILE . LPAR ExpressionAux RPAR StatementError

    LPAR  shift, and go to state 84


State 44

   38 Statement: IF . LPAR ExpressionAux RPAR StatementError
   39          | IF . LPAR ExpressionAux RPAR StatementError ELSE StatementError

    LPAR  shift, and go to state 85


State 45

   41 Statement: RETURN . ExpressionAux SEMI
   42          | RETURN . SEMI

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    SEMI     shift, and go to state 86
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression     go to state 38
    ExpressionAux  go to state 87


State 46

   36 Statement: LBRACE . StatementErrorAux RBRACE
   37          | LBRACE . RBRACE
   43          | LBRACE . error RBRACE

    error    shift, and go to state 88
    WHILE    shift, and go to state 43
    IF       shift, and go to state 44
    RETURN   shift, and go to state 45
    NOT      shift, and go to state 30
    LBRACE   shift, and go to state 46
    LPAR     shift, and go to state 31
    RBRACE   shift, and go to state 89
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    SEMI     shift, and go to state 48
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Statement          go to state 90
    StatementErrorAux  go to state 91
    StatementError     go to state 92
    Expression         go to state 38
    ExpressionAux      go to state 53


State 47

   10 FunctionBody: LBRACE RBRACE .

    $default  reduce using rule 10 (FunctionBody)


State 48

   35 Statement: SEMI .

    $default  reduce using rule 35 (Statement)


State 49

   11 FunctionBody: LBRACE DeclarationsAndStatements . RBRACE
   12 DeclarationsAndStatements: DeclarationsAndStatements . Statement
   13                          | DeclarationsAndStatements . Declaration

    error    shift, and go to state 1
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 43
    IF       shift, and go to state 44
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 45
    VOID     shift, and go to state 6
    NOT      shift, and go to state 30
    LBRACE   shift, and go to state 46
    LPAR     shift, and go to state 31
    RBRACE   shift, and go to state 93
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    SEMI     shift, and go to state 48
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Declaration    go to state 94
    TypeSpec       go to state 51
    Statement      go to state 95
    Expression     go to state 38
    ExpressionAux  go to state 53


State 50

   15 DeclarationsAndStatements: Declaration .

    $default  reduce using rule 15 (DeclarationsAndStatements)


State 51

   23 Declaration: TypeSpec . Declarator DeclarationAux SEMI

    ID  shift, and go to state 96

    Declarator  go to state 20


State 52

   14 DeclarationsAndStatements: Statement .

    $default  reduce using rule 14 (DeclarationsAndStatements)


State 53

   34 Statement: ExpressionAux . SEMI
   77 ExpressionAux: ExpressionAux . COMMA Expression

    COMMA  shift, and go to state 79
    SEMI   shift, and go to state 97


State 54

   25 DeclarationAux: DeclarationAux COMMA . Declarator

    ID  shift, and go to state 96

    Declarator  go to state 98


State 55

   23 Declaration: TypeSpec Declarator DeclarationAux SEMI .

    $default  reduce using rule 23 (Declaration)


State 56

   48 Expression: Expression . ASSIGN Expression
   49           | Expression . PLUS Expression
   50           | Expression . MINUS Expression
   51           | Expression . MUL Expression
   52           | Expression . DIV Expression
   53           | Expression . MOD Expression
   54           | Expression . OR Expression
   55           | Expression . AND Expression
   56           | Expression . BITWISEAND Expression
   57           | Expression . BITWISEOR Expression
   58           | Expression . BITWISEXOR Expression
   59           | Expression . EQ Expression
   60           | Expression . NE Expression
   61           | Expression . LE Expression
   62           | Expression . GE Expression
   63           | Expression . LT Expression
   64           | Expression . GT Expression
   67           | NOT Expression .

    $default  reduce using rule 67 (Expression)


State 57

   75 Expression: LPAR error . RPAR

    RPAR  shift, and go to state 99


State 58

   74 Expression: LPAR ExpressionAux . RPAR
   77 ExpressionAux: ExpressionAux . COMMA Expression

    COMMA  shift, and go to state 79
    RPAR   shift, and go to state 100


State 59

   48 Expression: Expression . ASSIGN Expression
   49           | Expression . PLUS Expression
   50           | Expression . MINUS Expression
   51           | Expression . MUL Expression
   52           | Expression . DIV Expression
   53           | Expression . MOD Expression
   54           | Expression . OR Expression
   55           | Expression . AND Expression
   56           | Expression . BITWISEAND Expression
   57           | Expression . BITWISEOR Expression
   58           | Expression . BITWISEXOR Expression
   59           | Expression . EQ Expression
   60           | Expression . NE Expression
   61           | Expression . LE Expression
   62           | Expression . GE Expression
   63           | Expression . LT Expression
   64           | Expression . GT Expression
   66           | MINUS Expression .

    $default  reduce using rule 66 (Expression)


State 60

   48 Expression: Expression . ASSIGN Expression
   49           | Expression . PLUS Expression
   50           | Expression . MINUS Expression
   51           | Expression . MUL Expression
   52           | Expression . DIV Expression
   53           | Expression . MOD Expression
   54           | Expression . OR Expression
   55           | Expression . AND Expression
   56           | Expression . BITWISEAND Expression
   57           | Expression . BITWISEOR Expression
   58           | Expression . BITWISEXOR Expression
   59           | Expression . EQ Expression
   60           | Expression . NE Expression
   61           | Expression . LE Expression
   62           | Expression . GE Expression
   63           | Expression . LT Expression
   64           | Expression . GT Expression
   65           | PLUS Expression .

    $default  reduce using rule 65 (Expression)


State 61

   68 Expression: ID LPAR . Expression ExpressionSecAux RPAR
   69           | ID LPAR . RPAR
   76           | ID LPAR . error RPAR

    error    shift, and go to state 101
    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    RPAR     shift, and go to state 102
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 103


State 62

   55 Expression: Expression AND . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 104


State 63

   54 Expression: Expression OR . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 105


State 64

   56 Expression: Expression BITWISEAND . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 106


State 65

   57 Expression: Expression BITWISEOR . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 107


State 66

   58 Expression: Expression BITWISEXOR . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 108


State 67

   51 Expression: Expression MUL . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 109


State 68

   52 Expression: Expression DIV . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 110


State 69

   59 Expression: Expression EQ . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 111


State 70

   60 Expression: Expression NE . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 112


State 71

   62 Expression: Expression GE . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 113


State 72

   64 Expression: Expression GT . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 114


State 73

   61 Expression: Expression LE . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 115


State 74

   63 Expression: Expression LT . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 116


State 75

   48 Expression: Expression ASSIGN . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 117


State 76

   50 Expression: Expression MINUS . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 118


State 77

   49 Expression: Expression PLUS . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 119


State 78

   53 Expression: Expression MOD . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 120


State 79

   77 ExpressionAux: ExpressionAux COMMA . Expression

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression  go to state 121


State 80

   17 FunctionDeclarator: ID LPAR ParameterList RPAR .

    $default  reduce using rule 17 (FunctionDeclarator)


State 81

   19 ParameterListAux: COMMA . ParameterDeclaration ParameterListAux

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterDeclaration  go to state 122
    TypeSpec              go to state 42


State 82

   18 ParameterList: ParameterDeclaration ParameterListAux .

    $default  reduce using rule 18 (ParameterList)


State 83

   21 ParameterDeclaration: TypeSpec ID .

    $default  reduce using rule 21 (ParameterDeclaration)


State 84

   40 Statement: WHILE LPAR . ExpressionAux RPAR StatementError

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression     go to state 38
    ExpressionAux  go to state 123


State 85

   38 Statement: IF LPAR . ExpressionAux RPAR StatementError
   39          | IF LPAR . ExpressionAux RPAR StatementError ELSE StatementError

    NOT      shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    PLUS     shift, and go to state 33
    ID       shift, and go to state 34
    INTLIT   shift, and go to state 35
    CHRLIT   shift, and go to state 36
    REALLIT  shift, and go to state 37

    Expression     go to state 38
    ExpressionAux  go to state 124


State 86

   42 Statement: RETURN SEMI .

    $default  reduce using rule 42 (Statement)


State 87

   41 Statement: RETURN ExpressionAux . SEMI
   77 ExpressionAux: ExpressionAux . COMMA Expression

    COMMA  shift, and go to state 79
    SEMI   shift, and go to state 125


State 88

   43 Statement: LBRACE error . RBRACE
   47 StatementError: error . SEMI

    RBRACE  shift, and go to state 126
    SEMI    shift, and go to state 127


State 89

   37 Statement: LBRACE RBRACE .

    $default  reduce using rule 37 (Statement)


State 90

   46 StatementError: Statement .

    $default  reduce using rule 46 (StatementError)


State 91

   36 Statement: LBRACE StatementErrorAux . RBRACE
   44 StatementErrorAux: StatementErrorAux . StatementError
